# flow-guardian-simplified

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  AUDIT.md  Agent1.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INTEGRATION_GUIDE.md  MCP_setup.md  NEW_USER_WALKTHROUGH.md  PROMPT_build.md  PROMPT_plan.md  PROVIDERS.md  README.md  SESSION_SUMMARY.md  SETUP.md  SYSTEM_ARCHITECTURE.md  TEAM_SETUP.md  agent2.md  backboard.md  backboard_client.py  capture.py  cerebras_client.py  daemon.py  demo_inference.py  embeddings.py  flow.py  flow_cli.py  git_utils.py  handoff.py  inject.py  linear_agent.py  linear_client.py  local_memory.py  (+16 more)
.claude/: settings.json
api/: __init__.py  dependencies.py  server.py
docs/: HACKATHON_PLAN.md  OPENCLAW-SETUP.md
flow-web/: package-lock.json  package.json
scripts/: benchmark_tokens.py
services/: __init__.py  config.py  flow_service.py  models.py
specs/: 00_OVERVIEW.md  01_SAVE_COMMAND.md  02_RESUME_COMMAND.md  03_LEARN_COMMAND.md  04_RECALL_COMMAND.md  05_TEAM_COMMAND.md  06_STATUS_HISTORY_COMMANDS.md  07_MEMORY_MODULE.md  08_BACKBOARD_CLIENT.md  09_CEREBRAS_CLIENT.md  10_SEAMLESS_CONTEXT_OVERVIEW.md  11_HANDOFF_SYSTEM.md  12_TLDR_SYSTEM.md  13_HOOKS_INTEGRATION.md  14_SEMANTIC_RECALL.md  15_SETUP_COMMAND.md
tests/: conftest.py  document_generator.py  test_backboard.py  test_backboard_client.py  test_cerebras_client.py  test_daemon.py  test_e2e.py  test_flow_cli.py  test_handoff.py  test_inject.py  test_large_scale.py  test_linear_agent.py  test_tldr.py  (+9 more)
(+59 files in other folders)
