[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-guardian"
version = "0.1.0"
description = "Persistent memory for AI coding sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "cerebras-cloud-sdk>=1.0",
]

[project.scripts]
flow = "flow_cli:cli"
